Fixed layout issue when using standalone review cells

--- a/src/less/cells/product-review-cell.less
+++ b/src/less/cells/product-review-cell.less
@@ -4,7 +4,7 @@
 	width: 100%;
 	.padding();
 	
-	&:not(.swiper-container-horizontal) {
+	&.swiper-container:not(.swiper-container-horizontal) {
 		.product-review-cell {
 			margin-right: 10px;
 			
